k3s/apps/testing/nginx-hello/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: testing
  labels:
    app: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
